migrate to java 9 with classpath